<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android1</string>
    <string name="dia_calc">Diabetes Calculator</string>
    <string name="avg_glu">Average Glucose</string>
    <string name="a1c_score">A1C Score</string>
    <string name="adag_form">ADAG Formula (eAG = (1.583 * A1c - 2.52) * 18.05)</string>
    <string name="dcct_form">DCCT Formula (eAG = (A1c *35.6) - 77.3)</string>
    <string name="go_sugar_log">Sugar Log</string>
    <string name="go_alarms">Alarms</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="before_meal">Before Meal</string>
    <string name="after_meal">After Meal</string>
    <string name="notes">Notes</string>
    <string name="bs_reading">Blood Sugar Reading:</string>
    <string name="btn_Add">Add to Log</string>
    <string name="back">Back</string>
    <string name="show_chart">Show Chart</string>
    <string name="set_date_range">Set the date range</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="submit">Submit</string>
    <string name="success">Success!</string>
    <string name="failure">Failed!</string>
    <string name="menu_main">Calculator</string>
    <string name="alarm1">Alarm 1</string>
    <string name="alarm2">Alarm 2</string>
    <string name="alarm3">Alarm 3</string>
    <string name="alarm4">Alarm 4</string>
    <string name="alarm5">Alarm 5</string>
    <string name="alarm6">Alarm 6</string>
    <string name="alarm7">Alarm 7</string>
    <string name="alarm8">Alarm 8</string>
    <string name="alarm9">Alarm 9</string>
    <string name="alarm10">Alarm 10</string>
    <string name="repeat">Repeat?</string>
    <string name="doc_email">Doctor Email</string>
    <string name="userEmail">User Email</string>
    <string name="subject">Subject</string>
    <string name="docNotes">Notes to doctor</string>
    <string name="email_doc">Email Doctor</string>
    <string name="pref_adag">I prefer to use the ADAG algorithm</string>
    <string name="pref_dcct">I prefer to use the DCCT algorithm</string>
    <string name="logStart">Sugar log Start Date</string>
    <string name="logEnd">Sugar log End Date</string>
</resources>
