<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dia_calc"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/avg_glu"
            android:id="@+id/textView2"/>
    <EditText
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@id/averageGlucose" android:background="@android:color/darker_gray"
            android:imeOptions="actionDone"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/a1c_score"
            android:id="@+id/textView3"/>
    <EditText
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/a1c" android:background="@android:color/darker_gray"
            android:imeOptions="actionDone"/>
    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="98dp">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adag_form"
                android:id="@+id/rdoADAG" android:checked="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dcct_form"
                android:id="@+id/rdoDCCT" android:checked="false"/>
    </RadioGroup>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_sugar_log"
                    android:id="@+id/btnSwitch" android:layout_column="5"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RX Alarm"
                    android:id="@+id/btnSwitchToAlarm" android:layout_column="8"/>
        </TableRow>
    </TableLayout>
</LinearLayout>